# bachelor-project

./: README.md
blender/: table_my_ground_v1.blend  table_my_ground_v1.blend1
blender/exports/: arena_image_2.png~  table_my_ground_v1.1.dae  table_my_ground_v1.2.fbx  table_my_ground_v1.dae  table_my_ground_v1.stl
eurobot_fsm/: package.xml  setup.cfg  setup.py
eurobot_fsm/eurobot_fsm/: eurobot_fsm.py  image_processing.py  navigation.py
eurobot_simulation/: package.xml  setup.cfg  setup.py
eurobot_simulation/eurobot_simulation/: lift_driver.py  vacuum_pump_driver.py
eurobot_simulation/launch/: robot_launch.py
eurobot_simulation/resource/: robot_webots.urdf  robot_webots_camera.urdf  ros2_control.yaml  ros2_control_camera.yaml
eurobot_simulation/worlds/: .default.wbproj  default.wbt
freecad/: ebot_3d_arena.FCStd  ebot_3d_arena.FCStd1  ebot_puck.FCStd1
freecad/exports/: Mesh001001.mtl
resources/freecad/: ebot_3d_arena.FCStd1  ebot_3d_arena_my_table_floor.FCStd  ebot_3d_arena_my_table_floor.FCStd1  ebot_puck.FCStd  ebot_scale.FCStd1  test_part.FCStd  test_part.FCStd1
resources/freecad/exports/: Body (Meshed).stl  (+2 more)
ros_test/install/: local_setup.sh  setup.sh
ros_test/log/: latest_build
simulation-world/protos/: test_part.proto
tex/: main.aux  main.bbl  main.blg  main.tex  main.toc
tex/bib/: uni.bib
tex/chapters/: __latexindent_temp.tex  appendix.tex  comparing_simulators.tex  introduction.tex
webots/protos/: .Robot_1.cache  .mesh_node.cache  mesh_node.proto
webots/worlds/: .empty.wbproj  .world_v1.wbproj  empty.wbt  world_v1.wbt
(+17 files in other folders)
