<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eurobot_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lazicdanilo47@gmail.com">Danilo Lazic</maintainer>
  <maintainer email="lukicdarkoo@gmail.com">Darko Lukic</maintainer>
  <license>TODO: License declaration</license>

  <depend>ros2_controllers</depend>

  <!-- Uncomment once v1.1.1 gets into the distribution. -->
  <!-- <exec_depend>webots_ros2_driver</exec_depend> -->
  <!-- <exec_depend>webots_ros2_control</exec_depend> -->

  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
